landing-page/landing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
spec:
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page
        image: myawesomeapps/landing-page:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
