landing-page/landing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page-svc
spec:
  type: ClusterIP
  selector:
    app: landing-page
  ports:
  - port: 80
    targetPort: 3000
