landing-page/landing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: awesomeapps.cloud
    external-dns.alpha.kubernetes.io/ttl: "120"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"    
  labels:
    name: landing-ingress
spec:
  tls:
    - hosts:
      - "awesomeapps.cloud"
      secretName: "landing-page-tls"
  rules:
  - host: awesomeapps.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: landing-page-svc
            port:
              number: 80
